[tool.poetry]
name = "user_analytics"
version = "0.1.0"
description = ""
authors = ["kevinshen1101 <40150857+kevinshen1101@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.4"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
